fastapitest/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapitest-deployment
  labels:
    app: myfastapiapp
spec:
  selector:
    matchLabels:
      app: myfastapiapp
  replicas: 1
  template:
    metadata:
      labels:
        app: myfastapiapp
    spec:
      containers:
      - name: myfastapitest
        image: noctsol/fastapitest:00.02
        # Only set this to never if you want to use images you build locally
        imagePullPolicy: Always
        resources:
          limits:
            memory: "500Mi"
