fastapitest/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-issuer
spec:
  rules:
    - host: dev.noctsol.test
      http:
        paths:
          - backend:
              service:
                name: fastapitest-service
                port:
                  number: 8001
            path: /
            pathType: "Prefix"
          # - backend:
          #     service:
          #       name: fastapitest-service
          #       port:
          #         number: 443
          #   path: /
          #   pathType: "Prefix"
  # tls:
  #   - hosts:
  #       - dev.noctsol.test
  #     secretName: noctsol-cert-tls
